appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "003_admin_user_assigns_assignment_to_a_class_test"

onFlowComplete:
  - runScript:
      file: "scripts/teardown.js"
---
- runFlow: "subflows/school_admin_login_flow.yaml"
- assertVisible:
    id: "app_title"
    text: "Apps"
- runFlow: "subflows/admin_add_app.yaml"
- tapOn: "People"
- tapOn:
    id: "ExpandableFab"   #  +Person button
- tapOn: "Add new person"
- assertVisible:
    id: "app_title"
    text: "Add person"
- tapOn: "First names*"
- inputText: "TeacherA"
- tapOn: "Last name*"
- inputText: "User"
- tapOn: "Gender*"
- tapOn: "Female"
- tapOn:
    id: "role"
- tapOn: "Teacher"
- tapOn: "Save"
- tapOn: "TeacherA User"
- tapOn: "Create account"
- assertVisible: "teacherauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Save"
- assertVisible: "Manage account"
- runFlow:
    file: "subflows/user_add_class.yaml"
    env:
      CLASSNAME: "TestClass"
- assertVisible:
    id: "app_title"
    text: "TestClass"

#Teacher login to add class and assignment
- clearState: world.respect.app
- launchApp:
    arguments:
      respect_directory: ${output.SCHOOL_URL}

- tapOn: "Get Started"

- runFlow:
    file: "subflows/get_started_select_school_by_name.yaml"
    env:
      SCHOOL_NAME: ${SCHOOL_NAME}

- tapOn:
    id: "username"
- inputText: "teacherauser"
- tapOn:
    id : "password"
- inputText: "test123"
- tapOn: "Login"

- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- assertVisible: "Apps"
- tapOn: "Classes"
- assertVisible:
    id: "app_title"
    text: "Classes"
- assertVisible: "TestClass"
- tapOn: "Assignments"
- tapOn:
    id: "floating_action_button"   #  +Assignment button
- assertVisible:
    id: "app_title"
    text: "Add assignment"
- tapOn: "Save"
- assertVisible: "Required field"
- tapOn: "Assignment name*"
- inputText: "Homework 1"
- tapOn: "Class"
- tapOn: "TestClass"
- tapOn: "Date"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.futureDate}
- tapOn: "Time"
- runScript:
    file: "scripts/setDate.js"
- inputText: ${output.currentTime}
- tapOn: "Lesson/assessment"
- assertVisible:
    id: "app_title"
- tapOn: "My app"
- tapOn: "Grade 1"
- tapOn: "Lesson 001"
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: "Homework 1"
- assertVisible: "Lesson 001"
- back
- assertVisible: "Homework 1"

