appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "001_004_shared_device_test.yaml"

onFlowComplete:
  - runFlow:
      file: "subflows/teardown.yaml"
      env:
        NAME: "db-final"
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}

---
## Admin setup
- runFlow: "subflows/school_admin_login_flow.yaml"

# Add class, then add Student and Teacher to class
- runFlow:
     file: "subflows/admin_add_class.yaml"
     env:
       CLASS_NAME: New Class
- runFlow:
    file: "subflows/add_person_to_a_class.yaml"
    env:

      ADD_USER: "Add Student"
      FIRSTNAME: "StudentA"
      LASTNAME:  "User"
      GENDER: "Male"
      CLASS_NAME: "New Class"
      USERNAME: "studentauser"
      PASSWORD: "test123"
      QR_BADGE_LINK: ${output.SCHOOL_URL}respect_school_link/personqrbadge/id/12312
- back
- runFlow:
    file: "subflows/add_person_to_a_class.yaml"
    env:
      ADD_USER: "Add Teacher"
      FIRSTNAME: "TeacherA"
      LASTNAME:  "User"
      GENDER: "Male"
      CLASS_NAME: "New Class"
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- tapOn:
    id: "nav_home"
- assertVisible:
    id: "app_title"
    text: "Home"

# Enable Shared Mode - Test Device 1
- tapOn:
    id: "Settings"
- assertVisible:
    id: "app_title"
    text: "Settings"
- assertVisible: "School name, policies, shared device"
- tapOn: "School"
- assertVisible:
    id: "app_title"
    text: "School"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "Shared school device"
- assertVisible: "0 devices"
- tapOn: "Shared school device"
- assertVisible:
    id: "app_title"
    text: "Shared school device"
- assertVisible: "No Shared Devices Available"
- assertVisible: "Shared school devices allow multiple users to securely access the app on the same device using their profile"
- assertVisible: "Student can self-select their class and name"
- assertVisible: "Teacher/admin unlock PIN"
- copyTextFrom:
    id: "set_pin"
- tapOn:
    id: "set_pin"
- assertVisible: "Set PIN"
- inputText: "123"
- tapOn: "Save"
- assertVisible: "Error: please enter 4 digit number"
- eraseText
- inputText: "123a"
- tapOn: "Save"
- assertVisible: "Error: please enter 4 digit number"
- tapOn: "Cancel"
- assertVisible: ${maestro.copiedText}
- tapOn:
    id: "set_pin"
- assertVisible: "Set PIN"
- inputText: "1234"
- tapOn: "Save"
- assertVisible:
    id: "app_title"
    text: "Shared school device"
- assertVisible: "1234"

# Enable This Device
- tapOn:
    id: "floating_action_button"
- assertVisible: "Add device"
- assertVisible: "This device"
- assertVisible: "Enable shared school device on mode on this device"
- assertVisible: "Another device"
- assertVisible: "Add using QR code, link, or invite code"
- tapOn: "This device"
- assertVisible:
    id: "app_title"
    text: "Enable shared school device mode"
- tapOn: "Enable"
- assertVisible: "Required field*" #mandatory field error
- tapOn:
    text: "Device name *"
    index: 1
- inputText: "Test Device 1"
- hideKeyboard
- assertVisible: "Enable"
- tapOn: "Enable"
- assertVisible:
    id: "app_title"
    text: "Select class"
- assertVisible: "New Class"
- assertVisible: "Scan QR code badge"

# Enable Test Device 1
- tapOn: "Teacher/admin login"
- assertVisible:
    id: "app_title"
    text: "Teacher/admin login"
#- tapOn: "Enter school device PIN"
#- inputText: ${maestro.copiedText}
#- tapOn: "Next"
#- assertVisible: "Incorrect device PIN"
#- eraseText
- tapOn: "Enter school device PIN"
- inputText: "1234"
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Login"
#- tapOn: "Select another school"
#- runFlow:
#    file: "subflows/get_started_select_school_by_name.yaml"
#    env:
#      SCHOOL_NAME: ${SCHOOL_NAME}
- tapOn:
    id: "username"
- inputText: "teacherauser"
- tapOn:
    id : "password"
- inputText: "test123"
- tapOn: "Login"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- tapOn:
    id: "nav_home"
- assertVisible:
    id: "app_title"
    text: "Home"
- tapOn:
    id: "Settings"
- assertVisible:
    id: "app_title"
    text: "Settings"
- tapOn: "School"
- assertVisible:
    id: "app_title"
    text: "School"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "Shared school device"
- assertVisible: "1 devices"
- tapOn: "Shared school device"
- assertVisible:
    id: "app_title"
    text: "Shared school device"
- assertVisible: "Student can self-select their class and name"  #switch is ON
- assertVisible: "Teacher/admin unlock PIN"
- assertVisible: "Devices (1)"
- assertVisible: "Test Device 1 (This device)"

# Generate Invite Link (Approval OFF)
- tapOn:
    id: "floating_action_button"
- assertVisible: "Add device"
- tapOn: "Another device"
- assertVisible:
    id: "app_title"
    text: "Add shared school device"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "Approval required"    #switch is On
- assertVisible: "Copy link"
- assertVisible: "Send link via SMS"
- assertVisible: "Send link via email"
- assertVisible: "Share link"
- assertVisible: "Reset code"
- tapOn: "Approval required" # turn the switch off
- assertVisible: "Approval not required until:.*"
- copyTextFrom:
      id: "invite_url"
- runFlow:
    file: "subflows/e2e_artifact_upload.yaml"
    env:
      NAME: "db-shared-device"

# Enable Test Device 2
- clearState: world.respect.app
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${maestro.copiedText}
- tapOn: "Get Started"
- assertVisible:
    id: "app_title"
    text: "Enable shared school device mode"
- tapOn:
    text: "Device name *"
    index: 1
- inputText: "Test Device 2"
- tapOn: "Enable"
- assertVisible:
    id: "app_title"
    text: "Select class"
- assertVisible: "Scan QR code badge"
- assertVisible: "Teacher/admin login"
- tapOn: "New Class"
- assertVisible:
    id: "app_title"
    text: "New Class"
- tapOn: "StudentA User"
- assertVisible:
    id: "app_title"
    text: "Assignments"
- assertVisible: "Assignments"
- assertVisible: "Home"
- assertNotVisible: "Class"
- assertNotVisible: "People"
- tapOn:
    id: "user_account_icon"
- assertNotVisible: "Share Feedback"
- assertVisible: "StudentA User"
- tapOn: "Logout"
- assertVisible:
    id: "app_title"
    text: "Select class"

# Teacher login to shared school device to see devices update
- tapOn: "Teacher/admin login"
- assertVisible:
    id: "app_title"
    text: "Teacher/admin login"
- tapOn: "Enter school device PIN"
- inputText: "1234"
- tapOn: "Next"
- tapOn:
    id: "username"
- inputText: teacherauser
- tapOn:
    id : "password"
- inputText: test123
- tapOn: "Login"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "subflows/save_password_prompt_cancel.yaml"
- tapOn:
    id: "nav_home"
- assertVisible:
    id: "app_title"
    text: "Home"
- tapOn:
    id: "Settings"
- assertVisible:
    id: "app_title"
    text: "Settings"
- tapOn: "School"
- assertVisible:
    id: "app_title"
    text: "School"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "Shared school device"
- assertVisible: "2 devices"
- tapOn: "Shared school device"
- assertVisible:
    id: "app_title"
    text: "Shared school device"
- tapOn:
    id: "self_select_their_class" #switch is OFF
- assertVisible: "Teacher/admin unlock PIN"
- assertVisible: "Devices (2)"
- assertVisible: "Test Device 2 (This device)"
- assertVisible: "Test Device 1"
- tapOn:
    id: "user_account_icon"
- tapOn: "Logout"

# Validating flow when the Student can self-select their class and name switch is OFF
- assertVisible:
    id: "app_title"
    text: "Login"
- assertNotVisible: "New Class"
- assertVisible: "Teacher/admin login"
- tapOn: "Scan QR code badge"
- assertVisible:
    id: "app_title"
    text: "Scan QR code badge"
- tapOn: "More Options"
- tapOn: "Paste URL"
- tapOn: "Url"
- inputText:  ${output.SCHOOL_URL}respect_school_link/personqrbadge/id/12312
- tapOn: "OK"

# DISABLED temporarily 21/Jan/2026 by Mike - how this is handled is being changed
# This part validate - When a device is in shared school device mode, if the user clicks scan a QR code badge button, then ONLY a QR code badge (student login badge) will be accepted.
#- inputText: ${maestro.copiedText}
#- tapOn: "OK"
#- assertVisible: "Invalid QR code scanned"
#- tapOn: "Try again"
#- assertVisible:
#    id: "app_title"
#    text: "Scan QR code badge"
#- tapOn: "More Options"
#- tapOn: "Paste URL"
#- tapOn: "Url"
#- inputText:  ${output.SCHOOL_URL}respect_school_link/personqrbadge/id/12312
#- tapOn: "Ok"

- assertVisible:
    id: "app_title"
    text: "Assignments"
- assertVisible: "Assignments"
- assertVisible: "Home"
- assertNotVisible: "Class"
- assertNotVisible: "People"
- tapOn:
    id: "user_account_icon"
- assertNotVisible: "Share Feedback"
- assertVisible: "StudentA User"
- tapOn: "Logout"

