appId: world.respect.app

---
- tapOn: "People"
- assertVisible:
      id: "app_title"
      text: "People"
- tapOn: ${FIRSTNAME} ${LASTNAME}
- assertVisible:
        id: "app_title"
        text: ${FIRSTNAME} ${LASTNAME}
