appId: world.respect.app
---

- tapOn:
    id: "school_name"

- inputText: ${SCHOOL_NAME}

- hideKeyboard

- tapOn:
    id: "school_name_text"
    text: ${SCHOOL_NAME}
